--- a/visions-du-passé/package.json
+++ b/visions-du-passé/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "gsap": "^3.12.5",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
